--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -6,12 +6,12 @@
 		<groupId>org.vaadin.ion</groupId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	
+
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>ui</artifactId>
 	<packaging>war</packaging>
-	
+
 	<name>Vaadin TouchKit Web Application</name>
 
 	<repositories>
@@ -62,7 +62,8 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<!--  TODO check if this is really needed ?? In add-on project it is needed for linker -->
+			<!-- TODO check if this is really needed ?? In add-on project it is needed 
+				for linker -->
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-client-compiler</artifactId>
 			<version>${vaadin.version}</version>
@@ -112,7 +113,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<!-- As we are doing "inplace" GWT compilatio, ensure the widgetset -->
 			<!-- directory is cleaned properly -->
 			<plugin>
@@ -131,11 +132,20 @@
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>8.1.8.v20121106</version>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
 		</plugins>
-		
+
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
